Fix broken layout when error occurs

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -133,3 +133,5 @@ a {
   width: 300px;
   margin: auto;
 }
+
+.field_with_errors { display: inline; }
